# This file is part of Dico
# Copyright (C) 2008 Sergey Poznyakoff
#
# Dico is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# Dico is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Dico.  If not, see <http://www.gnu.org/licenses/>.

pkginclude_HEADERS = \
 argcv.h\
 assoc.h\
 diag.h\
 filter.h\
 list.h\
 strat.h\
 stream.h\
 types.h\
 url.h\
 utf8.h\
 util.h\
 xlat.h
